--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <button type="button" class="btn btn-danger mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-info-circle-fill me-3"></i>Protokol Kesehatan COVID-19</button>
           </div>
         </div>
+
         <!-- MODAL PROKES -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog">
@@ -215,6 +216,7 @@
           </div>
         </div>
         <!-- END MODAL -->
+
         <div class="row justify-content-center text-center mt-5">
           <div class="col-md-8">
             <p>Atas kehadiran serta doa restunya, kami sekeluarga mengucapkan terima kasih.</p>
@@ -232,7 +234,8 @@
         d="M0,192L48,202.7C96,213,192,235,288,240C384,245,480,235,576,213.3C672,192,768,160,864,170.7C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
       ></path>
     </svg>
-    <!-- GAllery -->
+    
+    <!-- Gallery -->
     <section id="gallery">
       <div class="container">
         <div class="row text-center">
