--- a/index.html
+++ b/index.html
@@ -270,32 +270,11 @@
     <!-- End Gallery -->
 
     <!-- Footer -->
-    <footer style="background-color: #5f9ea0; padding: 5em 2em">
+    <footer style="background-color: #5f9ea0; padding: 2em 2em 6em 2em;">
       <div class="container">
-        <div class="row text-center">
-          <div class="col">
-            <h3>
-              <a href="" style="color: #1c3850; text-decoration: none; font-family: calibri">WebDateng</a>
-            </h3>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col">
-            <p>Follow Us</p>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col">
-            <h3 style="font-size: 30px">
-              <a href=""><i class="bi bi-instagram me-3" style="color: #1c3850; text-decoration: none"></i></a>
-              <a href=""><i class="bi bi-youtube me-3" style="color: #1c3850; text-decoration: none"></i></a>
-              <a href=""><i class="bi bi-facebook" style="color: #1c3850; text-decoration: none"></i></a>
-            </h3>
-          </div>
-        </div>
         <div class="row text-center mt-3">
           <div class="col">
-            <p>Made with <i class="bi bi-heart-fill text-danger"></i> in Indonesia | Angga Adi</p>
+            <p  style="color: #fafafa;font-family: Arial, Helvetica, sans-serif;font-weight: 600;">Made with <i class="bi bi-heart-fill text-danger"></i> in Indonesia | <a href="" style="text-decoration: none; color: #fafafa">WebDateng</a></p>
           </div>
         </div>
       </div>
@@ -315,11 +294,11 @@
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      offset: 150,
-      duration: 1000
-    });
-  </script>
+    <script>
+      AOS.init({
+        offset: 150,
+        duration: 1000
+      });
+    </script>
   </body>
 </html>
